# algo2-2018

labo/taller1/alumnos/: CMakeLists.txt  Makefile
labo/taller1/alumnos/src/: Lista.h  Lista.hpp
labo/taller1/alumnos/tests/: lista_tests.cpp
labo/taller1/alumnos/tests/googletest-release-1.8.0/: CTestTestfile.cmake
labo/taller1/alumnos/tests/googletest-release-1.8.0/googlemock/: CTestTestfile.cmake
labo/taller1/alumnos/tests/googletest-release-1.8.0/googlemock/gtest/: CTestTestfile.cmake
labo/taller2/alumnos/src/: Conjunto.h  Conjunto.hpp
labo/taller2/alumnos/tests/: conjunto-tests.cpp
labo/taller3/alumnos/src/: string_map.h  string_map.hpp
labo/taller3/alumnos/tests/: string_map_tests.cpp
tps/tp1/tp/src/: Calculadora.cpp  Calculadora.h  Instruccion.cpp  Instruccion.h  Programa.cpp  Programa.h  Utiles.h
tps/tp1/tp/tests/: test_calculadora.cpp
tps/tp2/tp2/: Parte.h  Sistema.h  Transaccion.h
